# smerig-bot

./: .gitignore  domain.yml  pyproject.toml  scrape_oma_weet_raad.py
data/: base_nlu.md  nlu.md  qna_dataframe.pickle  responses.md
results/: intent_report.json
tests/: conversation_tests.md
