[tool.poetry]
name = "smerig-bot"
version = "0.1.0"
description = ""
authors = ["jobvisser03 <jobvisserhcm@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.6"
cryptography = "2.9.0"
tensorflow = "2.1.0"
rasa = "^1.9.6"
beautifulsoup4 = "^4.9.0"
jupyterlab = "^2.1.0"
lxml = "^4.5.0"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
