[tool.poetry]
name = "smerig-bot"
version = "0.1.0"
description = ""
authors = ["jobvisser03 <jobvisserhcm@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.7"
cryptography = "*"
tensorflow = "*"
rasa = "*"
beautifulsoup4 = "*"
lxml = "*"
pandas = "*"
rasa-x = {url = "https://pypi.rasa.com/api/package/rasa-x/rasa_x-1.1.4-py3-none-any.whl"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
